# Go_Backend/cmd/api/auth.go
@@ -1,11 +1,17 @@
 package main
 
 import (
+  "fmt"
+  "log"
   "net/http"
   "encoding/hex"
   "crypto/sha256"
-  "github.com/google/uuid"
+	"time"
+	
+	"github.com/golang-jwt/jwt/v5"
+	"github.com/google/uuid"
   "CoffeeMap/internal/store"
+  "CoffeeMap/internal/mailer"
 )
 // registerUserHandler godoc
 //
@@ -89,8 +95,32 @@ func (app *application) registerUserHandler(w http.ResponseWriter, r *http.Reque
     User: user,
     Token: plainToken,
   }
+  activationURL := fmt.Sprintf("%s/confirm/%s", app.config.frontendURL, plainToken)
+
+  isProdEnv := app.config.env == "production"
+
+  vars := struct {
+    Username string
+    ActivationURL string
+  } {
+    Username: user.Username,
+    ActivationURL: activationURL,
+  }
+
   //send mail
-  //
+  status, err := app.mailer.Send(mailer.UserWelcomeTemplate, user.Username, user.Email, vars, !isProdEnv)
+  if err != nil {
+    log.Printf("error sending welcome email")
+ 
+    if err := app.store.Users.Delete(ctx, user.ID); err != nil {
+      log.Printf("error deleting user!")
+    }
+
+    app.internalServerError(w, r, err)
+    return
+  } 
+
+  log.Printf("Email sent with status code %v", status)
 
 
   if err := app.jsonResponse(w, http.StatusCreated, userWithToken); err != nil {
@@ -98,4 +128,63 @@ func (app *application) registerUserHandler(w http.ResponseWriter, r *http.Reque
   }
 }
 
+type CreateUserTokenPayload struct {
+	Email    string `json:"email" validate:"required,email,max=255` 
+	Password string `json:"password" validate:"required,min=7,max=255"`
+}
 
+// Handler godoc
+//
+//	@Summary		Creates a token
+//	@Description	Creates a token for a user
+//	@Tags			authentication
+//	@Accept			json
+//	@Produce		json
+//	@Param			payload	body		CreateUserTokenPayload	true	"User credentials"
+//	@Success		200		{string}	string					"Token"
+//	@Failure		400		{object}	error
+//	@Failure		401		{object}	error
+//	@Failure		500		{object}	error
+//	@Router			/authentication/token [post]
+func (app *application) createTokenHandler (w http.ResponseWriter, r *http.Request) {
+	//parse payload credentials
+	var payload CreateUserTokenPayload
+  if err := readJSON(w, r, &payload); err != nil {
+    app.badRequestResponse(w, r, err)
+    return
+  }
+
+  if err := Validate.Struct(payload); err != nil {
+    app.badRequestResponse(w, r, err)
+    return
+  }
+	//retrieve user (check is user exists)
+	user, err := app.store.Users.GetByEmail(r.Context(), payload.Email)
+	if err != nil {
+		switch err {
+		case store.ErrNotFound:
+			app.unauthorizedErrorResponse(w, r, err)
+			return
+		default:
+			app.internalServerError(w, r, err)
+		}
+		return
+	}
+	// generate the token -> add claims 
+	claims := jwt.MapClaims{
+		"sub": user.ID,
+		"exp": time.Now().Add(app.config.auth.token.exp).Unix(),
+		"iat": time.Now().Unix(),
+		"nbf": time.Now().Unix(),
+		"iss": app.config.auth.token.iss,
+		"aud": app.config.auth.token.iss,
+	}
+	token, err := app.authenticator.GenerateToken(claims)
+	if err != nil {
+		app.internalServerError(w, r, err)
+	}
+
+	if err := app.jsonResponse(w, http.StatusCreated, token); err != nil {
+    app.internalServerError(w, r, err)
+  }
+}
